Convert service to singleton for system user
Active Edge is a shared CHRE resource, so we can't have multiple
services controlling it when multiple profiles and users are active.
Convert the service and boot receiver to singletons that only run in the
system user to fix conflicts between profiles.

This isn't ideal, and we still need to remove the Active Edge preference
from secondary users, but it fixes the gesture for now.

TODO: Add support for arbitrating access and settings across users

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,17 +38,18 @@
     <application
         android:label="@string/app_name"
         android:allowBackup="false"
-        android:requiredForAllUsers="true"
         android:supportsRtl="true"
         android:persistent="true"
         android:directBootAware="true">
 
-        <!-- Core -->
+        <!-- Core (singleton) -->
 
         <service android:name=".ElmyraService"
+            android:singleUser="true"
             android:exported="false" />
 
-        <receiver android:name=".BootReceiver">
+        <receiver android:name=".BootReceiver"
+            android:singleUser="true">
             <intent-filter>
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
             </intent-filter>
@@ -91,6 +92,8 @@
                 android:value="content://org.protonaosp.elmyra.settings.summary/entry" />
             <!-- To make it appear at the top, like stock -->
             <meta-data android:name="com.android.settings.order" android:value="-100" />
+            <!-- Don't show in work profiles -->
+            <meta-data android:name="com.android.settings.profile" android:value="primary_profile_only" />
         </activity>
 
         <provider
